--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,9 +1,21 @@
 ja:
   enums:
     order:
+      status:
+        wait_payment: '入金待ち'
+        confirm_payment: '入金確認'
+        making: '製作中'
+        preparing_ship: '発送準備中'
+        finish_prepare: '発送済み'
       payment_method:
         credit_card: "クレジットカード"
         transfer: "銀行振込"
+    order_detail:
+      making_status:
+        impossible_manufacture: '着手不可'
+        waiting_manufacture: '製作待ち'
+        manufacturing: '製作中'
+        finish: '製作完了'
   activerecord:
     errors:
       messages:
