add kaminari layout and top item image size

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -197,3 +197,9 @@ ja:
       long: "%Y/%m/%d %H:%M"
       short: "%m/%d %H:%M"
     pm: 午後
+  views:
+    pagination:
+      first: "« First"
+      last: "Last »"
+      previous: "‹ Prev"
+      next: "Next ›"
