--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -193,7 +193,7 @@ ja:
   time:
     am: 午前
     formats:
-      default: "%Y/%m/%d"
+      default: "%Y/%m/%d %H:%M:%S"
       long: "%Y/%m/%d %H:%M"
       short: "%m/%d %H:%M"
     pm: 午後
